# option-pricing-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/metadata/: AAPL_metadata.json  option_metadata.json
data/processed/: AAPL.csv  AAPL.parquet  fmde.db  option_analytics.csv
data/raw/: AAPL.csv
data/sample/: option_chain_sample.csv
docs/: api.md  architecture.md  assumptions.md  explainability.md  methodology.md  references.md  validation.md
notebooks/: generate_charts.py
reports/: AAPL_report.md  option_report.md
src/ope/: __init__.py  config.py  explain.py  main.py  pipeline.py
src/ope/option/: binomial.py  black_scholes.py  instrument.py  monte_carlo.py
src/ope/reporting/: report.py
src/ope/source/: market.py
src/ope/storage/: manager.py
src/ope/utils/: logging.py
tests/: conftest.py  test_binomial.py  test_black_scholes.py  test_explain.py  test_greeks.py  test_instrument.py  test_monte_carlo.py  test_pipeline_integration.py  test_reporting.py  test_source.py  test_storage.py
